<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow">

            <Button
                android:id="@+id/questionBackBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/question"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/qFractionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/placeholder"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/correctTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/correct"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/correctValueTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/placeholder"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/timerTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="5"
                android:layout_weight="1"
                android:text="@string/number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:id="@+id/questionRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.9"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="35dp">

            <TextView
                android:id="@+id/questionPromptTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="6"
                android:background="@color/white"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fillerQuestion"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/firstBtnRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="5"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/optionOneBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/option"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/optionTwoBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_span="3"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/option"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/secondBtnRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.75">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="5"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/optionThreeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/option"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/optionFourBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_span="3"
                    android:layout_weight="1"
                    android:backgroundTint="@color/dark_blue"
                    android:text="@string/option"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/nextRow"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="6"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="invisible" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>